config/cosign-webhook/service.yaml
# SPDX-License-Identifier: Apache-2.0
# Copyright (c) 2026 keese-ai
apiVersion: v1
kind: Service
metadata:
  name: keese-cosign-webhook
  namespace: keese-system
  labels:
    app.kubernetes.io/name: keese-cosign-webhook
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: keese-cosign-webhook
  ports:
    - name: https-webhook
      port: 443
      targetPort: webhook
      protocol: TCP
    - name: http-health
      port: 8081
      targetPort: health
      protocol: TCP
    - name: http-metrics
      port: 8082
      targetPort: metrics
      protocol: TCP
